Fix background gap in Safari

--- a/src/less/modules/_theme-base.less
+++ b/src/less/modules/_theme-base.less
@@ -1,4 +1,6 @@
 .theme-base() {
+  background-color: @background;
+
   .asciinema-terminal {
     color: @foreground;
     background-color: @background;
